1396
If that merits a warning, then wouldn't this also merit a warning for the identical reason (modulo the name of the runtime exception):
```scala
scala> val strs = Array("abc", "def")            
strs: Array[java.lang.String] = Array(abc, def)

scala> val arr = strs.asInstanceOf[Array[AnyRef]] // no warning
arr: Array[AnyRef] = Array(abc, def)

scala> strs(0) = new AnyRef                      
<console>:6: error: type mismatch;
 found   : java.lang.Object
 required: java.lang.String
       strs(0) = new AnyRef
                 ^

scala> arr(0) = new AnyRef                       
java.lang.ArrayStoreException: java.lang.Object
```
I'll defer to more sophisticated type system users than myself on this, but I have always been under the impression that asInstanceOf is how you say "I know what I'm doing, please Mr. Type System, just do it."
